[gd_scene load_steps=20 format=3 uid="uid://vu46hfcjlto8"]

[ext_resource type="Script" uid="uid://bs1ak8leds0bh" path="res://scripts/green_slime.gd" id="1_0pvn7"]
[ext_resource type="Texture2D" uid="uid://5337mn5akts1" path="res://enemies/Green Slime Spritesheet.png" id="1_bln8p"]
[ext_resource type="PackedScene" uid="uid://c4d3ysupvvxhs" path="res://scenes/killzone.tscn" id="2_tuic5"]
[ext_resource type="Script" uid="uid://c0jprrj8m417d" path="res://scripts/enemy_stomp_box.gd" id="4_4q1e0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1p6"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl2pm"]
atlas = ExtResource("1_bln8p")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q800"]
atlas = ExtResource("1_bln8p")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rgu"]
atlas = ExtResource("1_bln8p")
region = Rect2(96, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vyh"]
atlas = ExtResource("1_bln8p")
region = Rect2(112, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_452or"]
atlas = ExtResource("1_bln8p")
region = Rect2(128, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuic5"]
atlas = ExtResource("1_bln8p")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvn7"]
atlas = ExtResource("1_bln8p")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q1e0"]
atlas = ExtResource("1_bln8p")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo2g"]
atlas = ExtResource("1_bln8p")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq38r"]
atlas = ExtResource("1_bln8p")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_io87k"]
atlas = ExtResource("1_bln8p")
region = Rect2(128, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4q1p6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl2pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q800")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452or")
}],
"loop": true,
"name": &"death_sprites",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq38r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io87k")
}],
"loop": true,
"name": &"slime_walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0pvn7"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_boo2g"]
size = Vector2(10, 4)

[node name="Green_Slime" type="Node2D"]
script = ExtResource("1_0pvn7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4q1p6")
animation = &"slime_walk"
autoplay = "slime_walk"

[node name="Killzone" parent="." instance=ExtResource("2_tuic5")]
collision_mask = 2

[node name="KillBox" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_0pvn7")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)

[node name="StompBox" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("4_4q1e0")

[node name="slimehead" type="CollisionShape2D" parent="StompBox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_boo2g")

[connection signal="body_entered" from="Killzone" to="StompBox" method="_on_killzone_body_entered"]
[connection signal="body_entered" from="StompBox" to="." method="_on_stomp_box_body_entered"]
[connection signal="body_entered" from="StompBox" to="Killzone" method="_on_stomp_box_body_entered"]
